# feedpress

./: .gitignore  CNAME  Dockerfile  README.md  docker-compose.yml  feedpress.sh  package-lock.json  package.json  tailwind.config.js
app/: Cargo.toml
app/config/: log4rs.yaml
app/src/: config.rs  editions.rs  endpoints.rs  main.rs  press.rs  scheduler.rs
assets/static/: index.html  output.css  tmp.txt
data/: config.toml  feeds.toml
docs/: all.html  constant.REQUEST_TIMEOUT_SECS.html  constant.VERSION.html  fn.add_feed_url.html  fn.article_too_old.html  fn.compile_feeds.html  fn.create_edition.html  fn.default_section.html  fn.get_config.html  fn.get_feed.html  fn.main.html  fn.press_feeds.html  fn.process_biblio.html  fn.process_content.html  fn.remove_feed_url.html  fn.scrape_this.html  index.html  index.md  sidebar-items.js  struct.Args.html  struct.BiblioEntry.html  struct.ContentEntry.html  struct.FeedConfig.html  struct.FeedEntry.html  struct.Press.html
docs/config/: fn.default_section.html  index.html  struct.FeedConfig.html  struct.FeedEntry.html
docs/editions/: index.html  sidebar-items.js  struct.EditionEntry.html  struct.Editions.html
docs/endpoints/: fn.api_get_config.html  fn.api_get_edition_list.html  fn.api_get_logs.html  fn.api_get_version.html  fn.api_press_edition.html  fn.api_remove_edition.html  fn.api_update_config.html  fn.get_file_create.html  fn.get_file_name.html  fn.get_file_pages.html  fn.get_file_size.html  fn.get_img_name.html  index.html  sidebar-items.js
input/: 20240919.toml  hello-bib.yml  hello.toml  hello.typ  input-bib.yml  input.toml
output/: .gitignore
site/: index.html  index.md
templates/: bookshelf.typ  feedpress.typ  hello.typ  layout.typ
(+29 files in other folders)
