[package]
name = "feedpress"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.7"
tokio-macros = "2.4.0"
tokio = { version = "1.40.0", features = ["full"] }
rss = "2.0"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
hayagriva = { version = "0.5.3", default-features = false }
chrono = "0.4.38"