[package]
name = "feedpress"
version = "0.5.1"
edition = "2021"

[dependencies]
reqwest = "0.12.7"
tokio-macros = "2.4.0"
tokio = { version = "1.40.0", features = ["full"] }
rss = "2.0"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
hayagriva = { version = "0.5.3", default-features = false }
chrono = "0.4.38"
url = "2.5.2"
article_scraper = "2.1.0"
fast_html2md = "0.0.15"
spider_transformations = "2.6.16"
clap = { version = "4.5.18", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
